# AgenticAI

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  agent_outcomes.jsonl  config.env.example  pyproject.toml  requirements.txt  scratch_send_y.py
.claude/: settings.json
.claude/agents/: developer-agent.md  jira-analyst.md
.claude/hooks/: posttooluse-format.py  pretooluse-guard.py  session-start.py  token-budget-guard.py
.claude/rules/: engineering.md  patterns.md
Project Documentation/: ADL-1700_20260529_001102.docx  ADL-1700_20260529_001838.docx  ADL-1700_20260529_002355.docx  ADL-1700_20260529_010720.docx  ADL-1700_20260529_011634.docx  ADL-1700_20260529_012107.docx  ADL-1700_20260529_013649.docx  ADL-1700_20260529_051435.docx  ADL-1700_20260529_112802.docx  ADL-1700_20260529_114035.docx  ADL-1700_20260529_120013.docx  ADL-1700_20260529_122030.docx  ADL-1700_20260529_123324.docx  ADL-1700_20260529_124742.docx  ADL-1700_20260529_130528.docx  ADL-1700_20260530_074046.docx  ADL-1700_20260530_095625.docx  ADL-1700_20260530_100207.docx  ~$L-1700_20260529_130528.docx
docs/: ai_dashboard_prototype.html  ai_dashboard_prototype_l.html  ai_dashboard_prototype_new.html  ai_dashboard_prototypes.html  ai_orchestration_dashboard_spec.md  dashboard_parser.js  pipeline_dashboard.html  workflow_architecture.md
docs/architecture/: antigravity_systems_audit.md  (+2 more)
tests/: conftest.py  test_dashboard_api.py  test_dashboard_events.py  test_dashboard_parser.cjs  test_documentation_adapters.py  test_documentation_agent.py  test_documentation_context.py  test_documentation_filler.py  test_documentation_renderers.py  test_documentation_template.py  test_llm_selection.py  test_memory_integration.py  test_memory_wiring.py  test_run_ticket.py  test_smoke.py
(+269 files in other folders)
