[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adl-automated-delivery-pipeline"
version = "1.0.0"
description = "Claude-native LangGraph multi-agent pipeline: Jira → Documentation → Dremio → Qlik for ASL Airlines (ADL)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "DnT Infotech — DataLake Team" }]

# Runtime dependencies are pinned in requirements.txt for reproducibility.
# This list captures the top-level libraries for packaging metadata.
dependencies = [
    "langchain>=1.3",
    "langgraph>=1.2",
    "langchain-anthropic>=1.4",
    "anthropic>=0.105",
    "jira>=3.10",
    "python-docx>=1.2",
    "fastapi>=0.136",
    "uvicorn>=0.48",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
# Optional LLM fallback providers.
openai = ["openai>=2.38", "langchain-openai>=1.2"]
gemini = ["google-genai>=2.7", "langchain-google-genai>=4.2"]

[project.scripts]
adl-pipeline = "adl_automated_delivery_pipeline.workflows.adl_automated_delivery_pipeline:main"
adl-jira = "adl_automated_delivery_pipeline.agents.jira_claude_agent:main"
adl-doc = "adl_automated_delivery_pipeline.workflows.generate_doc:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["adl_automated_delivery_pipeline*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch external services (Jira, Dremio, LLM)",
]
